福島Project/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Address_Shinsei__c</fullName>
        <label>住所（申請事業所）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Sofusaki__c</fullName>
        <description>郵便物の送付先住所

［初期値］
相双エリア以外：申請事業所の住所
相双エリア：助成金対象事業所の住所

申し送り事項で送付先が変わった場合は、その住所となる</description>
        <label>住所（送付先）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Taisyo__c</fullName>
        <label>住所（助成金対象事業所）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaihyousyaYakusyokuShimei__c</fullName>
        <description>事業所の代表者の役職・氏名</description>
        <label>代表者（役職氏名）</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HojoYushiName__c</fullName>
        <description>［覚書］
対象分野等名称と合わせてTRへ移動予定</description>
        <inlineHelpText>事業区分が①か②の時入力してください。</inlineHelpText>
        <label>補助・融資名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HoseiShido_Aitesaki_Busyo__c</fullName>
        <label>部署名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HoseiShido_Aitesaki_IninjoAri__c</fullName>
        <defaultValue>false</defaultValue>
        <label>委任状あり</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HoseiShido_Aitesaki_Jimusyo_TantosyaMei__c</fullName>
        <label>事務所名・担当者名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HoseiShido_Aitesaki_Renrakusaki2__c</fullName>
        <description>事務所名・担当者名の連絡先</description>
        <inlineHelpText>事務所名・担当者名の連絡先</inlineHelpText>
        <label>連絡先２</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HoseiShido_Aitesaki_Renrakusaki__c</fullName>
        <description>相手先担当者の連絡先</description>
        <inlineHelpText>相手先担当者の連絡先</inlineHelpText>
        <label>連絡先１</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HoseiShido_Aitesaki_TantosyaMei__c</fullName>
        <label>担当者氏名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KoyoHokenTekiyoJigyosyoNO__c</fullName>
        <inlineHelpText>半角数字＋半角ハイフンで入力してください。</inlineHelpText>
        <label>雇用保険適用事業所番号</label>
        <length>11</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SaikensyaTorokuNO__c</fullName>
        <label>債権者登録番号</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaisyoBunyaName__c</fullName>
        <description>［覚書］
補助・融資名称と合わせてTRへ移動予定
できればsmallAの時点で①②同様設定しておいて貰いたい</description>
        <inlineHelpText>事業区分が③か④の時入力してください。</inlineHelpText>
        <label>対象分野等名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YubinBango_Shinsei__c</fullName>
        <description>申請事業所の郵便番号</description>
        <label>郵便番号（申請事業所）</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YubinBango_Sofusaki__c</fullName>
        <description>郵便物の送付先郵便番号

［初期値］
相双エリア以外：申請事業所の郵便番号
相双エリア：助成金対象事業所の郵便番号 → 情報がないので空欄

申し送り事項で送付先が変わった場合は、その郵便番号となる</description>
        <label>郵便番号（送付先）</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>KoyoHokenTekiyoJigyosyoNO__c</columns>
        <columns>DaihyousyaYakusyokuShimei__c</columns>
        <columns>Address_Shinsei__c</columns>
        <columns>Address_Taisyo__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべての事業所</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>